Fix grid and page elements appearing outside scrollable viewport.

--- a/axa/content.html
+++ b/axa/content.html
@@ -51,8 +51,7 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif;
       display: flex;
       flex-direction: column;
-      overflow-x: hidden;
-      /* allow vertical scroll */
+      overflow-x: auto;
       overflow-y: auto;
     }
 
