--- a/axa/content.html
+++ b/axa/content.html
@@ -582,9 +582,9 @@
       color: var(--muted);
       line-height: 1;
       position: absolute;
-      top: -0.6rem;
-      left: 0;
-      padding-left: 0.2rem;
+      top: -1.1rem;
+      left: 0.35rem;
+      padding: 0;
     }
 
     .char-counter {
@@ -592,10 +592,10 @@
       color: var(--muted);
       line-height: 1;
       position: absolute;
-      bottom: -0.6rem;
-      right: 0;
+      bottom: -1.1rem;
+      right: 0.35rem;
       margin-top: 0;
-      padding-right: 0.2rem;
+      padding: 0;
     }
 
     .toggle.cta.caption-btn {
@@ -609,7 +609,7 @@
       max-width: 100%;
       margin: 0 auto;
       box-sizing: border-box;
-      padding: 0.8rem 0 0.8rem; /* tighter space for title/counter offsets */
+      padding: 0.4rem 0 0.4rem;
     }
 
     .handles-wrapper {
@@ -625,6 +625,7 @@
       flex-direction: column;
       align-items: center;
       margin: 0 auto;
+      position: relative;
     }
 
     .frame-wrap {
@@ -1005,11 +1006,11 @@
     </div> <!-- end board-wrapper -->
     <div class="handles-row" style="margin-top: 1.75rem;">
       <div class="handles-block">
-        <div class="handles-title">Alignment caption</div>
         <div class="handles-wrapper">
+          <div class="handles-title">Alignment caption</div>
           <p id="handlesText"></p>
+          <div id="charCounter" class="char-counter">0 / 280</div>
         </div>
-        <div id="charCounter" class="char-counter">0 / 280</div>
       </div>
     </div>
     </div> <!-- end frame-wrap -->
