Add minor styling tweaks to caption area.

--- a/axa/content.html
+++ b/axa/content.html
@@ -632,7 +632,7 @@
       border: 1px dashed rgba(255, 255, 255, 0.15);
       border-radius: 16px;
       padding: 16px;
-      padding-bottom: 48px; /* leave room for resizer */
+      padding-bottom: 20px; /* tighter space while keeping resizer clear */
       box-sizing: border-box;
       display: inline-flex;
       flex-direction: column;
@@ -1004,7 +1004,7 @@
       <div class="board-resizer" id="boardResizer" aria-label="Resize board" title="Drag to resize"></div>
     </div>
     </div> <!-- end board-wrapper -->
-    <div class="handles-row" style="margin-top: 1.75rem;">
+    <div class="handles-row" style="margin-top: 2.5rem;">
       <div class="handles-block">
         <div class="handles-wrapper">
           <div class="handles-title">Alignment caption</div>
